--- a/themes/base/src/scss/core/_legacy.scss
+++ b/themes/base/src/scss/core/_legacy.scss
@@ -1322,3 +1322,44 @@ Carousel Related content
   text-decoration: none;
   line-height: 14px;
 }
+
+.o-header__drawer-tools-close {
+  background-color: transparent !important;
+}
+
+.o-header__drawer[data-o-header-drawer--js][aria-hidden] {
+  -webkit-box-shadow: 0 1px 2px rgba(77,72,69,.25), 0 4px 6px rgba(77,72,69,.1);
+  box-shadow: 0 1px 2px rgba(77,72,69,.25), 0 4px 6px rgba(77,72,69,.1);
+  border-left: 30px solid transparent;
+  margin-left: -30px;
+  transition: transform 0.5s ease-in;
+
+}
+
+.o-header__drawer[data-o-header-drawer--js][aria-hidden=false] {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  transition: transform 0.5s ease-in;
+
+}
+
+.o-header__drawer[data-o-header-drawer--js] {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  border-right: 1px solid #ccc1b7;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+  -webkit-transform: translate3d(-100%,0,0);
+  transform: translate3d(-100%,0,0);
+  will-change: transform;
+  max-width: 320px;
+  transition: transform 0.5s ease-in;
+}
